<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.finki.gymapp.ui.cardio.CardioViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.favourite.FavouriteFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardio_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:listData="@{viewModel.cardioUiModel.workouts}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/workout_view_item" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>